# T20matchupviewer

./: .gitignore  README.md  api.py  app.py  data_sources.json  downloadmatchdata.py  extract_and_store.py  parser.py  player_stat_agg.py  pyproject.toml  runs_calc.py  sss.csv
templates/: about.html  index.html
